# trading-spy-iron-condor

./: .env.devloop.example  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  .secrets.baseline  .yamllint.yml  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.webhook  EMERGENCY_CLOSE.md  FORCE_IRON_CONDOR.md  Progress-Dashboard.md  README.md  TRIGGER_TRADE.md  cloudbuild-rag-webhook.yaml  cloudbuild-webhook.yaml  manual_layer1_tasks.md  package-lock.json  package.json  pyproject.toml  pytest.ini  pytest_cov_report.txt  ralph_output.txt  requirements-dashboard.txt  requirements-dev.in  requirements-minimal.txt  requirements.txt  trigger.config.ts  tsconfig.json  vitest.config.ts  wiki_home.md
.claude/: .gitignore  CLAUDE.md  DIRECTIVE_v2.1.md  SESSION_START_CHECKLIST.md  mcp_config.json  orchestrator_state.json  prd.json  settings.json
.claude/agents/: code-reviewer.md
.claude/commands/: cancel-ralph.md  generate-diagram.md  generate-plot.md  ralph-loop.md  ralph-status.md  update-diagrams.md
.claude/hooks/: auto_review_code.sh  autonomous_orchestrator.sh  block_destructive_actions.sh  block_position_close.sh  force_rag_learning.sh  gsd-pipeline.sh  inject_trading_context.sh  memory-gateway-pretool.sh  pre-commit  protect_critical_files.sh  require_magic_word.sh  session-start-async.sh  session-start-memalign.sh  session-start.sh  surface_feedback_patterns.sh  user-prompt-submit.sh  verify_date_claims.sh  verify_rag_completeness.sh
.claude/memory/: health-status.json  metadata.json
.claude/ralph/: progress.json  state.json
.claude/rules/: MANDATORY_RULES.md  autonomous-pm.md  blog-seo.md  compound-engineering.md  data-integrity.md  karpathy-principles.md  risk-management.md  rlhf-feedback.md  trading.md
.claude/scripts/: pre-work-check.sh  ralph-loop.sh
.claude/skills/: scan-iron-condor.md
.github/: copilot-instructions.md  dependabot.yml
.github/codeql/: codeql-config.yml
.github/instructions/: python.md
.github/prompts/: audit-governance.md  (+1 more)
.omx/: metrics.json
.planning/: PROJECT.md  ROADMAP.md  STATE.md  config.json
.trunk/: trunk.yaml
config/: browser_automation_pilot_tasks.json  browser_automation_provider.json  browser_provider_promotion_policy.json  local_llm_config.sh  manual_layer1_tasks.md  sandbox_config.json  strategy_ideas.yaml  strategy_registry.json
data/: TRADING_HALTED  heartbeat.json  lessons_learned.txt  north_star_weekly_history.json  openrouter_pricing_baseline.json  performance_log.json  system_state.json  thumbgate_rules.json  tier2_watchlist.json  trades.json  trades_2026-01-06.json  trades_2026-01-13.json  trades_2026-01-15.json  trades_2026-01-23.json  trades_2026-02-16.json  trades_2026-02-17.json  trades_2026-02-18.json  trades_2026-02-19.json  trades_2026-02-20.json  trades_2026-02-23.json  trades_2026-02-24.json  trades_2026-02-25.json  trades_2026-03-06.json  trades_backup.json  trades_for_clustering.json  verification_reports.json  watchlist_4ms_small_capital.json
docs/: ALPACA_LEVEL3_REQUEST_EMAIL.md  ALPACA_OPTIONS_UPGRADE.md  ARCHITECTURE.md  COWORK_INTEGRATION.md  Gemfile  _config.yml  about.html  about.md  agentic-terminal-workflow.md  beats.md  blog.html  blog.md  ci-runbook.md  discoveries.md  entity.html  harness_engineering.md  humans.txt  index.md  llms-full.txt  llms.txt  orchestration-data-contract.md  rag-operations.md  rag-query.html  reports.md  rlm_methodology.md  robots.txt  tech-stack.md  unsloth_deployment.md
infra/: .dockerignore  Dockerfile  docker-compose.yml
mcp/: client.py  registry.json  registry.py  utils.py
reports/: profit_target_report.json
scripts/: add_meta_descriptions.py  agent_handoff_gate.py  agent_workflow_toolkit.py  ai_disclosure.py  ai_seo_enhancer.py  assert_spy_only_positions.py  audit_strategy.py  auto_clear_stale_trading_halt.py  autonomous_trader.py  batch_tag_lessons.py  blog_intent_classifier.py  blog_narrative_generators.py  box_workspace_mirror.py  build_context_engine_index.py  build_north_star_blocker_report.py  build_rag_query_index.py  build_sqlite_analytics.py  build_truth_dashboard.py  build_unified_index.py  bypass_pdt_close.py  calculate_win_rate.py  cancel_and_protect.py  cancel_stale_orders.py  capture_hook_feedback.py  capture_trading_screenshots.py  check_ai_discoverability.py  check_anthropic_compliance.py  check_anti_manual_violations.py  check_duplicate_execution.py  check_earnings_positions.py  check_north_star_probability.py  check_weekly_cadence_gate.py  cleanup_vertex_rag.py  close_all_options.py  close_all_positions.py  close_excess_spreads.py  close_orphan_legs.py  close_positions.py  close_shorts_first.py  codex_notify_rlhf_bridge.py  (+163 more)
tests/: check_spx_support.py  conftest.py  run_tests_safe.sh  test_actionable_task_engine.py  test_add_meta_descriptions.py  test_agent_handoff_gate.py  test_agent_workflow_toolkit.py  test_agentic_cycle.py  test_ai_credit_stress_signal.py  test_alpaca_client.py  test_alpaca_executor.py  test_alpaca_executor_learning.py  test_alpaca_snapshot.py  test_api_circuit_breaker.py  test_audit_agent.py  test_auto_clear_stale_trading_halt.py  test_behavioral_guard.py  test_blog_seo.py  test_box_workspace_mirror.py  test_browser_automation_pilot.py  test_browser_provider_promotion.py  test_budget_tracker.py  test_build_north_star_blocker_report.py  test_build_rag_query_index.py  test_calculate_win_rate.py  test_calendar_validation.py  test_cancel_stale_orders.py  test_capture_hook_feedback.py  test_capture_trading_screenshots.py  test_check_ai_discoverability.py  test_check_north_star_probability.py  test_ci_runner_wiring.py  test_claudemd_compliance.py  test_codex_notify_rlhf_bridge.py  test_collect_agent_handoff_ab_metrics.py  test_compare_100k_vs_5k.py  test_compliance_audit.py  test_consolidate_memory.py  test_context_bundle_engine.py  test_core_strategy.py  (+155 more)
trigger/: daily-scanner.ts  iron-condor-guardian.ts  position-monitor.ts  run-python.ts  system-health.ts
triggers/: CLOSE_NONDT.trigger  CLOSE_ORPHAN.trigger  EXECUTE_SPREAD.trigger  FORCE_CLOSE.trigger  LIQUIDATE_NOW  TRIGGER_SYNC_NOW
(+1178 files in other folders)
